--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     color: var(--paragraph-color);
     font-family: outfit;
     font-weight: 100;
-    background: url("../images/background/dark.svg");
+    background: url("../images/background/green.svg");
     background-repeat: no-repeat;
     background-position: right;
     background-attachment: fixed;
