--- a/public/assets/css/items.css
+++ b/public/assets/css/items.css
@@ -17,8 +17,9 @@ h1, h2 {margin: 0.5;}
 }
 .categoryRow {
     overflow-x: auto;
+    overflow-y: hidden;
     width: 100%;
-    gap: 20px;
+    gap: 10px;
     margin-inline: 10px;
 }
 .product-img {
