--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -64,10 +64,11 @@ h1 {
     padding: 5rem 2rem;
 }
 
-.services h2 {
+.service h2 {
     display: flex;
-    justify-items: center;
-    text-align: center;
+    justify-content: center; /* keskittää vaakasuunnassa */
+    align-items: center;     /* keskittää pystysuunnassa */
+
 }
 
 .features {
@@ -149,6 +150,16 @@ h1 {
     backdrop-filter: blur(6px);
     transition: background 0.3s ease;
 }
+     .contact-map {
+            flex: 1;
+            max-width: 500px;
+        }
+
+        .contact-map iframe {
+            width: 100%;
+            height: 450px;
+            border-radius: 15px;
+        }
 
 .contact-item:hover {
     background: rgba(255, 255, 255, 0.15);
@@ -161,7 +172,9 @@ h1 {
 .contact-item p {
     opacity: 0.6;
 }
-
+ html {
+            scroll-behavior: smooth;
+        }
 @media (max-width:600px) {
 
     .hero-bg {
@@ -185,5 +198,25 @@ h1 {
         padding:12px 40px;
         margin-top:20px;
     }
-    
-}
+      .services-section h2,
+            .about-section h2,
+            .contact-section h2 {
+                font-size: 2rem;
+            }
+
+            .features {
+                grid-template-columns: 1fr;
+            }
+
+            .contact-wrapper {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .about-content,
+            .services-section,
+            .about-section,
+            .contact-section {
+                padding: 3rem 1rem;
+            }
+        }
