--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -152,7 +152,7 @@ body {
             color: #2d4a42;
         }
 
-        .image-placeholder {
+         .product-images {
             width: 100%;
             max-width: 600px;
             aspect-ratio: 1;
@@ -162,8 +162,11 @@ body {
             align-items: center;
             justify-content: center;
             font-size: 1.2rem;
-            opacity: 0.6;
         
+        }
+        .product-img {
+            width: 100%;
+            aspect-ratio: 1 / 1;
         }
 @media (max-width: 1368px) {
             .cart-box {
