--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -178,6 +178,24 @@ body {
             width: 100%;
             aspect-ratio: 1 / 1;
         }
+        .add-btn {
+             background-color: #ffffff;
+    color: #1a3a3a;
+    border: none;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    margin-top: 10px;
+    width: 50%;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+.add-btn:hover {
+    background-color: #8b8b8b;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
 @media (max-width: 1368px) {
             .cart-box {
                 scale: 1.15;
