--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -30,10 +30,10 @@ a:hover {color: var(--paragraph-color);}
     padding: 10px;
     margin: 5px;
     width: 100%;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
 }
 .side-nav-content:hover {
     transition: all 0.2s ease-in-out;
@@ -57,14 +57,14 @@ a:hover {color: var(--paragraph-color);}
     flex-direction: row-reverse;
     height: calc(100% - 10px);
     width: calc(100% - 100px);
-    border-radius: 24px;
+    border-radius: 12px;
     margin: 5px;
     padding: 5px;
     gap: 5px;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
 }
 .btn-search {
     display: flex;
@@ -72,15 +72,15 @@ a:hover {color: var(--paragraph-color);}
     align-items: center;
     width: 100px;
     height: calc(100% - 10px);
-    border-radius: 24px;
-    background: rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
 }
 .btn-search:hover {
     transition: all 0.1s ease-in-out;
-    background: rgba(255, 255, 255, 0.316);
+    background: rgba(255, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
@@ -95,31 +95,31 @@ a:hover {color: var(--paragraph-color);}
 }
 .select-type {
     width: 150px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
     color: #fff;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
 }
 .select-type:hover {
     transition: all 0.2s ease-in-out;
-    background: rgba(205, 205, 205, 0.52);
+    background: rgba(255, 255, 255, 0.1);
 }
 .textInput {
     width: 100%;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background: rgba(255, 255, 255, 0.1);
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
     color: #fff;
 }
 .textInput:hover {
     transition: all 0.2s ease-in-out;
-    background: rgba(205, 205, 205, 0.52);
+    background: rgba(255, 255, 255, 0.1);
 }
 .textInput:focus {
     transition: all 0.2s ease-in-out;
@@ -137,13 +137,13 @@ a:hover {color: var(--paragraph-color);}
     margin: 15px;
     height: 600px;
     border-radius: 5px;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
     overflow: auto;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
 }
 .output-headers {
     display: grid;
@@ -159,11 +159,14 @@ a:hover {color: var(--paragraph-color);}
 .output-row {
     display: grid;
     grid-template-columns: repeat(8,2fr);
-    background-color: #666666;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3);
 }
 .output-row:hover {
     transition: background-color 0.2s linear;
-    background-color: #a9a9a9;
+    background: rgba(255, 255, 255, 0.1);
 }
 .middle-popup {
     position: fixed;
