--- a/admin/assets/css/admin.css
+++ b/admin/assets/css/admin.css
@@ -80,10 +80,8 @@ a:hover {color: var(--paragraph-color);}
 }
 .btn-search:hover {
     transition: all 0.1s ease-in-out;
-    background: rgba(255, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0 20px 50px rgba(190, 39, 39, 0.3);
+    background: rgba(141, 46, 46, 0.76);
+    box-shadow: 0px 0px 50px 15px rgba(141, 46, 46, 0.76);
 }
 .btn-search button {
     background-color: transparent;
@@ -224,6 +222,9 @@ a:hover {color: var(--paragraph-color);}
     background: rgba(210, 14, 14, 0.76);
     box-shadow: 0px 0px 50px 15px rgba(190, 39, 39, 0.607);
 }
+#fetchOutput {
+    width: 100%;
+}
 @media (max-width:800px) {
     .output-div {
         align-items:first baseline;
@@ -280,6 +281,10 @@ a:hover {color: var(--paragraph-color);}
     }
     .middle-popup{
         backdrop-filter: blur(800px);
+    }
+    .output-row {
+        padding-inline: unset;
+        width: 100%;
     }
 }
 @media (min-width:1800px) {
