--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -151,6 +151,8 @@ height: 100%;
   text-decoration: none;
   color: #ffffff;
   margin: 0;
+    font-weight: 700;
+  font-size: 35px;
 }
 
 .nav-products {
@@ -166,6 +168,12 @@ height: 100%;
 .nav-link h1 {
   font-weight: 700;
   font-size: 45px;
+}
+
+.nav-greeting {
+   font-weight: 700;
+  font-size: 35px;
+  margin-left: 30px;
 }
 
 @font-face {
