--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,7 +14,9 @@ body {
   background-size: cover;
   margin: 0;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 .orders-container {
   max-width: 900px;
   margin: 40px auto;
