--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -67,8 +67,8 @@ h1 {
 
 .service h2 {
     display: flex;
-    justify-content: center; /* keskittää vaakasuunnassa */
-    align-items: center;     /* keskittää pystysuunnassa */
+    justify-content: center; 
+    align-items: center;    
 
 }
 
@@ -118,12 +118,15 @@ h1 {
 .about-content {
     border-radius: 20px;
     padding: 3rem;
+      transition: 0.3s ease;
      background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 20px 50px rgba(50, 50, 50, 0.3)
 }
-
+.about-content:hover {
+    transform: translateY(-10px);
+}
 .about h2 {
     text-align: center;
     margin-bottom: 2rem;
